--- a/src/assets/index.html
+++ b/src/assets/index.html
@@ -3,6 +3,10 @@
 <head>
 	<meta charset="utf-8">
     <title>react-webpack-project</title>
+    <meta name="keywords" content="">
+    <meta name="description" content="">
+    <meta http-equiv=X-UA-Compatible content="IE=edge,chrome=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
 </head>
 <body>
 	<div id="app" class="app">
