add ssr boilerplate code, with webpack middleware

--- a/src/assets/index.html
+++ b/src/assets/index.html
@@ -2,14 +2,13 @@
 <html>
 <head>
 	<meta charset="utf-8">
-    <title>react-webpack-project</title>
+    <title>Isomorphic Redux Example</title>
     <meta name="keywords" content="">
     <meta name="description" content="">
     <meta http-equiv=X-UA-Compatible content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
 </head>
 <body>
-	<div id="app" class="app">
-	</div>
+	<div id="app" class="app"></div>
 </body>
 </html>
